--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "resend": "^6.0.3",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/react": "19.1.12",
     "eslint": "^9",
     "eslint-config-next": "15.4.1",
     "tailwindcss": "^4"
